--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Build
 /target
+
+# Backup files
 *.rs.bk
+*.bak
+*~
+
+# Environment
 .env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
