--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
 name = "emeraldcoin"
-authors = ["MD Cinnamon <mdcinnamon@proton.me>"]
+authors = ["officialemeraldnetwork"]
 version = "0.1.0"
 edition = "2024"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A minimal blockchain implementation in Rust for demonstration purposes (e.g., job interviews)."
+repository = "https://github.com/officialemeraldnetwork/emeraldcoin"
+readme = "README.md"
+keywords = ["blockchain", "rust", "interview", "demo"]
+categories = ["algorithms", "cryptography","crypto"]
+
 
 [dependencies]
 ring = "0.16.20"
